packages/@cosmoscarnival/core/test-app/cdk.out/Core-Mgt-Account.template.json
{
  "Resources": {
    "SharedVpc96F0F614": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/22",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "Core-Mgt-Account/SharedVpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Core-Mgt-Account/SharedVpc/Resource"
      }
    },
    "SharedVpcCoreSubnet1SubnetD90321B2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/26",
        "VpcId": {
          "Ref": "SharedVpc96F0F614"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "Core-Mgt-Account/SharedVpc/CoreSubnet1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Core"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Core-Mgt-Account/SharedVpc/CoreSubnet1/Subnet"
      }
    },
    "SharedVpcCoreSubnet1RouteTableB70AECC1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "SharedVpc96F0F614"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Core-Mgt-Account/SharedVpc/CoreSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Core-Mgt-Account/SharedVpc/CoreSubnet1/RouteTable"
      }
    },
    "SharedVpcCoreSubnet1RouteTableAssociationAE84CE75": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "SharedVpcCoreSubnet1RouteTableB70AECC1"
        },
        "SubnetId": {
          "Ref": "SharedVpcCoreSubnet1SubnetD90321B2"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Core-Mgt-Account/SharedVpc/CoreSubnet1/RouteTableAssociation"
      }
    },
    "SharedVpcCoreSubnet2SubnetA37D5DB6": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.64/26",
        "VpcId": {
          "Ref": "SharedVpc96F0F614"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "Core-Mgt-Account/SharedVpc/CoreSubnet2"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Core"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Core-Mgt-Account/SharedVpc/CoreSubnet2/Subnet"
      }
    },
    "SharedVpcCoreSubnet2RouteTableCB955C1D": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "SharedVpc96F0F614"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Core-Mgt-Account/SharedVpc/CoreSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Core-Mgt-Account/SharedVpc/CoreSubnet2/RouteTable"
      }
    },
    "SharedVpcCoreSubnet2RouteTableAssociation82644BEB": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "SharedVpcCoreSubnet2RouteTableCB955C1D"
        },
        "SubnetId": {
          "Ref": "SharedVpcCoreSubnet2SubnetA37D5DB6"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Core-Mgt-Account/SharedVpc/CoreSubnet2/RouteTableAssociation"
      }
    },
    "SharedVpcS3Gateway58B8AA14": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".s3"
            ]
          ]
        },
        "VpcId": {
          "Ref": "SharedVpc96F0F614"
        },
        "RouteTableIds": [
          {
            "Ref": "SharedVpcCoreSubnet1RouteTableB70AECC1"
          },
          {
            "Ref": "SharedVpcCoreSubnet2RouteTableCB955C1D"
          }
        ],
        "VpcEndpointType": "Gateway"
      },
      "Metadata": {
        "aws:cdk:path": "Core-Mgt-Account/SharedVpc/S3Gateway/Resource"
      }
    },
    "SharedVpcEcsEndpointSecurityGroup5BBB3ABF": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Core-Mgt-Account/SharedVpc/EcsEndpoint/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "SharedVpc96F0F614",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "SharedVpc96F0F614",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "Core-Mgt-Account/SharedVpc"
          }
        ],
        "VpcId": {
          "Ref": "SharedVpc96F0F614"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Core-Mgt-Account/SharedVpc/EcsEndpoint/SecurityGroup/Resource"
      }
    },
    "SharedVpcEcsEndpoint39554E09": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ecs"
            ]
          ]
        },
        "VpcId": {
          "Ref": "SharedVpc96F0F614"
        },
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "SharedVpcEcsEndpointSecurityGroup5BBB3ABF",
              "GroupId"
            ]
          }
        ],
        "SubnetIds": [
          {
            "Ref": "SharedVpcCoreSubnet1SubnetD90321B2"
          },
          {
            "Ref": "SharedVpcCoreSubnet2SubnetA37D5DB6"
          }
        ],
        "VpcEndpointType": "Interface"
      },
      "Metadata": {
        "aws:cdk:path": "Core-Mgt-Account/SharedVpc/EcsEndpoint/Resource"
      }
    },
    "SharedVpcEcsAgentEndpointSecurityGroupF4FDE620": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Core-Mgt-Account/SharedVpc/EcsAgentEndpoint/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "SharedVpc96F0F614",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "SharedVpc96F0F614",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "Core-Mgt-Account/SharedVpc"
          }
        ],
        "VpcId": {
          "Ref": "SharedVpc96F0F614"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Core-Mgt-Account/SharedVpc/EcsAgentEndpoint/SecurityGroup/Resource"
      }
    },
    "SharedVpcEcsAgentEndpointF563397C": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ecs-agent"
            ]
          ]
        },
        "VpcId": {
          "Ref": "SharedVpc96F0F614"
        },
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "SharedVpcEcsAgentEndpointSecurityGroupF4FDE620",
              "GroupId"
            ]
          }
        ],
        "SubnetIds": [
          {
            "Ref": "SharedVpcCoreSubnet1SubnetD90321B2"
          },
          {
            "Ref": "SharedVpcCoreSubnet2SubnetA37D5DB6"
          }
        ],
        "VpcEndpointType": "Interface"
      },
      "Metadata": {
        "aws:cdk:path": "Core-Mgt-Account/SharedVpc/EcsAgentEndpoint/Resource"
      }
    },
    "SharedVpcEcsTelemetryEndpointSecurityGroup628281C3": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Core-Mgt-Account/SharedVpc/EcsTelemetryEndpoint/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "SharedVpc96F0F614",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "SharedVpc96F0F614",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "Core-Mgt-Account/SharedVpc"
          }
        ],
        "VpcId": {
          "Ref": "SharedVpc96F0F614"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Core-Mgt-Account/SharedVpc/EcsTelemetryEndpoint/SecurityGroup/Resource"
      }
    },
    "SharedVpcEcsTelemetryEndpoint21E8B9F4": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ecs-telemetry"
            ]
          ]
        },
        "VpcId": {
          "Ref": "SharedVpc96F0F614"
        },
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "SharedVpcEcsTelemetryEndpointSecurityGroup628281C3",
              "GroupId"
            ]
          }
        ],
        "SubnetIds": [
          {
            "Ref": "SharedVpcCoreSubnet1SubnetD90321B2"
          },
          {
            "Ref": "SharedVpcCoreSubnet2SubnetA37D5DB6"
          }
        ],
        "VpcEndpointType": "Interface"
      },
      "Metadata": {
        "aws:cdk:path": "Core-Mgt-Account/SharedVpc/EcsTelemetryEndpoint/Resource"
      }
    },
    "SharedVpcEcrEndpointSecurityGroup2D339FA4": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Core-Mgt-Account/SharedVpc/EcrEndpoint/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "SharedVpc96F0F614",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "SharedVpc96F0F614",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "Core-Mgt-Account/SharedVpc"
          }
        ],
        "VpcId": {
          "Ref": "SharedVpc96F0F614"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Core-Mgt-Account/SharedVpc/EcrEndpoint/SecurityGroup/Resource"
      }
    },
    "SharedVpcEcrEndpointEC349307": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ecr.api"
            ]
          ]
        },
        "VpcId": {
          "Ref": "SharedVpc96F0F614"
        },
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "SharedVpcEcrEndpointSecurityGroup2D339FA4",
              "GroupId"
            ]
          }
        ],
        "SubnetIds": [
          {
            "Ref": "SharedVpcCoreSubnet1SubnetD90321B2"
          },
          {
            "Ref": "SharedVpcCoreSubnet2SubnetA37D5DB6"
          }
        ],
        "VpcEndpointType": "Interface"
      },
      "Metadata": {
        "aws:cdk:path": "Core-Mgt-Account/SharedVpc/EcrEndpoint/Resource"
      }
    },
    "SharedVpcEcrDockerEndpointSecurityGroup041BC8B5": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Core-Mgt-Account/SharedVpc/EcrDockerEndpoint/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "SharedVpc96F0F614",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "SharedVpc96F0F614",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "Core-Mgt-Account/SharedVpc"
          }
        ],
        "VpcId": {
          "Ref": "SharedVpc96F0F614"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Core-Mgt-Account/SharedVpc/EcrDockerEndpoint/SecurityGroup/Resource"
      }
    },
    "SharedVpcEcrDockerEndpoint3156011A": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ecr.dkr"
            ]
          ]
        },
        "VpcId": {
          "Ref": "SharedVpc96F0F614"
        },
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "SharedVpcEcrDockerEndpointSecurityGroup041BC8B5",
              "GroupId"
            ]
          }
        ],
        "SubnetIds": [
          {
            "Ref": "SharedVpcCoreSubnet1SubnetD90321B2"
          },
          {
            "Ref": "SharedVpcCoreSubnet2SubnetA37D5DB6"
          }
        ],
        "VpcEndpointType": "Interface"
      },
      "Metadata": {
        "aws:cdk:path": "Core-Mgt-Account/SharedVpc/EcrDockerEndpoint/Resource"
      }
    }
  },
  "Outputs": {
    "ExportsOutputRefSharedVpc96F0F6140AE947C7": {
      "Value": {
        "Ref": "SharedVpc96F0F614"
      },
      "Export": {
        "Name": "Core-Mgt-Account:ExportsOutputRefSharedVpc96F0F6140AE947C7"
      }
    },
    "ExportsOutputRefSharedVpcCoreSubnet1SubnetD90321B24F8C1D03": {
      "Value": {
        "Ref": "SharedVpcCoreSubnet1SubnetD90321B2"
      },
      "Export": {
        "Name": "Core-Mgt-Account:ExportsOutputRefSharedVpcCoreSubnet1SubnetD90321B24F8C1D03"
      }
    },
    "ExportsOutputRefSharedVpcCoreSubnet2SubnetA37D5DB6DB907239": {
      "Value": {
        "Ref": "SharedVpcCoreSubnet2SubnetA37D5DB6"
      },
      "Export": {
        "Name": "Core-Mgt-Account:ExportsOutputRefSharedVpcCoreSubnet2SubnetA37D5DB6DB907239"
      }
    }
  }
}
